--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,14 @@
+bottle==0.12.19
+certifi==2020.12.5
+chardet==4.0.0
 click==7.1.2
 Flask==1.1.2
+idna==2.10
 itsdangerous==1.1.0
 Jinja2==2.11.2
 MarkupSafe==1.1.1
+requests==2.25.1
+urllib3==1.26.2
 Werkzeug==1.0.1
+WeRoBot==1.13.0
+xmltodict==0.12.0
