--- a/requirements.txt
+++ b/requirements.txt
@@ -2,11 +2,14 @@ bottle==0.12.19
 certifi==2020.12.5
 chardet==4.0.0
 click==7.1.2
+cssselect==1.1.0
 Flask==1.1.2
 idna==2.10
 itsdangerous==1.1.0
 Jinja2==2.11.2
+lxml==4.6.2
 MarkupSafe==1.1.1
+pyquery==1.4.3
 python-dotenv==0.15.0
 requests==2.25.1
 urllib3==1.26.2
